# opentelemetry-rust-parseable

./: Cargo.toml  README.md  docker-compose.yml
src/: lib.rs  main.rs  telemetry.rs
tests/: integration_test.rs
tests/common/: mod.rs
